irrlamb 1.0.1 -
- Added secret levels to menu when unlocked
- Fixed various bugs in house level
- Fixed some compile warnings
- Minor bug fixes

irrlamb 1.0.0 - 2019-05-04
- Added 16 new levels including a secret level
- Replaced Bullet physics engine with ODE
- Physics now runs at 500hz
- Updated UI which now scales with resolution
- Added replay sorting
- Added freecamera mode to replays
- Added gameplay options
- Added mouse sensitivity to options
- Added option for disabling multiple lights
- Added replay validation
- Added rolling friction
- Updated some tutorial levels
- Windows build now uses MinGW-w64
- Added irrlicht source to project and fixed many irrlicht bugs
- Increased quality of in-game screenshots

irrlamb 0.2.1 - 2015-10-02
- Redesigned replay screen
- Added new tutorial level
- Added installer for windows
- Can selectively enable gamepads in config file
- Added per-axis deadzone to config
- Next-level button works across campaigns now
- Added level name and highscore to HUD
- Autosave replays for new records
- Updated replay format
- Switched to c++11
- Various fixes to build system

irrlamb 0.2.0 - 2015-09-19
- Added gamepad support
- Added per-pixel lighting
- Added new levels
- Made menus and fonts bigger
- Can access options in-game now
- Added shaders, anisotropic filtering, V-sync, and MSAA to video options
- Added level names to menu
- Fixed replay bug
- Fixed memory leaks

irrlamb 0.1.1 - 2013-03-03
- Added audio (OpenAL)
- Added screen fading
- Added shader support
- Added support for customlevels
- Added invert mouse option (or press F2 during play)
- Save data now in %APPDATA%/irrlamb for windows
- Converted meshes to a binary format for faster loading
- Fixed a Lua API bug in Object.GetPosition
- Removed scons, added cmake.

irrlamb 0.1.0 - 2010-01-06
- Completely updated the game's graphics
- Added 12 tutorial levels + 2 skate levels
- Added ability to set shadows, filtering, and AA in config file
- Added cylinder objects