@@ -1,5 +1,6 @@
 irrlamb 1.0.1 -
 - Added secret levels to menu when unlocked
+- Added player/orb sounds to replays
 - Fixed various bugs in house level
 - Fixed some compile warnings
 - Minor bug fixes
